//file:noinspection GradlePackageUpdate
plugins {
    id 'org.springframework.boot' version '4.0.5'
    id 'io.freefair.lombok' version '9.2.0'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'java'
}

repositories {
    mavenCentral()
    maven {
        // https://gitlab.ceh.ac.uk/commons/java-commons (public)
        url = "https://gitlab.ceh.ac.uk/api/v4/projects/10/packages/maven"
    }
    maven {
        // Spring AI 2.0.0-M8 is a milestone release — not yet on Maven Central.
        // Remove once Spring AI 2.0 GA is published (see docs/vector-search-mcp.md).
        url = "https://repo.spring.io/milestone"
    }
}

configurations {
    mockitoAgent
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

bootJar {
    archiveFileName = 'app.jar'
}

compileJava {
    options.compilerArgs += ['-Xlint:deprecation', '-parameters']
    options.incremental = true
}

dependencies {
    // Spring Boot starters
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    implementation 'org.springframework.boot:spring-boot-starter-cache'
    implementation(libs.caffeine)
    implementation 'org.springframework.boot:spring-boot-starter-freemarker'
    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework:spring-jdbc'

    // Spring Security
    implementation 'org.springframework.security:spring-security-oauth2-jose'
    implementation 'org.springframework.security:spring-security-oauth2-resource-server'

    // Apache
    implementation(libs.bundles.jena)
    implementation "org.apache.solr:solr-solrj:10.0.0"

    // Spring AI — Bedrock Titan embeddings, MCP server, Tika document extraction
    implementation platform(libs.spring.ai.bom)
    implementation libs.spring.ai.bedrock
    implementation libs.spring.ai.mcp
    implementation libs.spring.ai.tika    // PDF/Word/RTF supporting document extraction

    // CEH Components
    implementation(libs.bundles.ukceh)

    // OpenAPI
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.3"

    // Third-party
    implementation 'tools.jackson.datatype:jackson-datatype-guava'
    implementation 'com.google.guava:guava:33.4.8-jre'
    implementation 'com.jayway.jsonpath:json-path'
    implementation 'com.nimbusds:nimbus-jose-jwt:10.9'
    implementation 'com.opencsv:opencsv:5.12.0'
    implementation 'com.vividsolutions:jts:1.13'
    implementation 'io.micrometer:micrometer-registry-prometheus'
    implementation 'org.hibernate.validator:hibernate-validator'
    implementation 'org.xerial:sqlite-jdbc'
    implementation 'org.yaml:snakeyaml'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    testImplementation(libs.mockito)
    mockitoAgent(libs.mockito) { transitive = false}

    testImplementation 'com.h2database:h2'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.xmlunit:xmlunit-core'
    testImplementation 'org.xmlunit:xmlunit-matchers'
}

tasks {
    test {
        useJUnitPlatform()
        jvmArgs += "-javaagent:${configurations.mockitoAgent.asPath}"
    }
}
